log
Tue 06 Sep 2022 01:34:38 AM UTC: 
 tests:  0|6
total_score: 0/70
5a539a6
Fri 09 Sep 2022 02:21:17 AM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:5: error: ‘buck’ undeclared (first use in this function)
   56 |     buck=hash->buckets;
      |     ^~~~
hashmap.c:56:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:57:11: error: ‘buckets’ undeclared (first use in this function)
   57 |     buck=(buckets*) calloc (1,sizeof(buckets));
      |           ^~~~~~~
hashmap.c:57:19: error: expected expression before ‘)’ token
   57 |     buck=(buckets*) calloc (1,sizeof(buckets));
      |                   ^
Compilation failed
3e544ae
Fri 09 Sep 2022 02:24:08 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:20: error: ‘buckets’ undeclared (first use in this function)
   56 |     hash->buckets=(buckets*) calloc (1,sizeof(buckets));
      |                    ^~~~~~~
hashmap.c:56:20: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:28: error: expected expression before ‘)’ token
   56 |     hash->buckets=(buckets*) calloc (1,sizeof(buckets));
      |                            ^
Compilation failed
71c82aa
Fri 09 Sep 2022 02:24:31 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:20: error: ‘hashMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   56 |     hash->buckets=(hashMap*) calloc (1,sizeof(hashMap));
      |                    ^~~~~~~
      |                    HashMap
hashmap.c:56:20: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:28: error: expected expression before ‘)’ token
   56 |     hash->buckets=(hashMap*) calloc (1,sizeof(hashMap));
      |                            ^
Compilation failed
0603998
Fri 09 Sep 2022 02:24:50 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:18: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   56 |     hash->buckets=(HashMap*) calloc (1,sizeof(HashMap));
      |                  ^
hashmap.c:56:18: error: ‘hash’ is used uninitialized in this function [-Werror=uninitialized]
   56 |     hash->buckets=(HashMap*) calloc (1,sizeof(HashMap));
      |     ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c42e0d
Fri 09 Sep 2022 02:24:59 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     hash->buckets=(HashMap*) calloc (1,sizeof(HashMap));
      |         ^~
      |         ->
hashmap.c:57:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   57 |     hash->current=-1;
      |         ^~
      |         ->
hashmap.c:58:12: error: returning ‘HashMap **’ {aka ‘struct HashMap **’} from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   58 |     return hash;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
eb66568
Fri 09 Sep 2022 02:49:55 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:20: error: initialization of ‘HashMap **’ {aka ‘struct HashMap **’} from incompatible pointer type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   55 |     HashMap **hash=(HashMap*) calloc (1,sizeof(HashMap));
      |                    ^
hashmap.c:56:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     hash->current=-1;
      |         ^~
      |         ->
hashmap.c:57:12: error: returning ‘HashMap **’ {aka ‘struct HashMap **’} from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   57 |     return hash;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
4f5ff54
Fri 09 Sep 2022 02:50:10 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     hash->current=-1;
      |         ^~
      |         ->
hashmap.c:57:12: error: returning ‘HashMap **’ {aka ‘struct HashMap **’} from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   57 |     return hash;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
4f40f9e
Fri 09 Sep 2022 02:50:54 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     hash->current=-1;
      |         ^~
      |         ->
Compilation failed
05b07b8
Fri 09 Sep 2022 02:51:05 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:10: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     *hash->current=-1;
      |          ^~
      |          ->
Compilation failed
bd63d8a
Fri 09 Sep 2022 02:51:16 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     hash->current=-1;
      |         ^~
      |         ->
Compilation failed
69fdc4c
Fri 09 Sep 2022 02:51:59 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:20: error: initialization of ‘HashMap **’ {aka ‘struct HashMap **’} from incompatible pointer type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   55 |     HashMap **hash=(HashMap*) calloc (1,sizeof(HashMap));
      |                    ^
hashmap.c:56:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     hash->current=-1;
      |         ^~
      |         ->
cc1: all warnings being treated as errors
Compilation failed
fb40692
Fri 09 Sep 2022 02:52:05 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     hash->current=-1;
      |         ^~
      |         ->
Compilation failed
fdb57ca
Fri 09 Sep 2022 02:52:16 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:11: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     **hash->current=-1;
      |           ^~
      |           ->
Compilation failed
6c5ecff
Fri 09 Sep 2022 02:54:30 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     hash->size=NULL:
      |         ^~
      |         ->
hashmap.c:56:20: error: expected ‘;’ before ‘:’ token
   56 |     hash->size=NULL:
      |                    ^
hashmap.c:58:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   58 |     hash->current=-1;
      |         ^~
      |         ->
Compilation failed
fdca48c
Fri 09 Sep 2022 02:54:38 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     hash->size=NULL;
      |         ^~
      |         ->
hashmap.c:57:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   57 |     hash->capacity=NULL;
      |         ^~
      |         ->
hashmap.c:58:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   58 |     hash->current=-1;
      |         ^~
      |         ->
Compilation failed
8a39c2d
Fri 09 Sep 2022 02:54:44 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   56 |     hash->size=NULL;
      |         ^~
      |         ->
hashmap.c:57:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   57 |     hash->capacity=NULL;
      |         ^~
      |         ->
hashmap.c:58:9: error: ‘*hash’ is a pointer; did you mean to use ‘->’?
   58 |     hash->current=-1;
      |         ^~
      |         ->
hashmap.c:59:12: error: returning ‘HashMap **’ {aka ‘struct HashMap **’} from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   59 |     return hash;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
2dcf34a
